# ROS-PIT-2025

./: README.md
doc/: comandos_git.md
mi_prime_paquete/: CMakeLists.txt  package.xml
mi_prime_paquete/scripts/: publicador.py  suscriptor.py
mi_prime_paquete/src/: pub_sub.cpp  publicador.cpp  suscriptor.cpp
mi_primer_paquete/: CMakeLists.txt  README.md  package.xml
mi_primer_paquete/launch/: pub_sub.launch
mi_primer_paquete/scripts/: pub_sub.py  publicador.py  suscriptor.py
mi_primer_paquete/src/: plantilla_pub.cpp  plantilla_sub.cpp  pub_sub.cpp  publicador.cpp  suscriptor.cpp
mi_primer_robot/: CMakeLists.txt  package.xml
mi_primer_robot/launch/: gazebo.launch  spawn_robot.launch  visualizar_rviz.launch  visualizar_rviz_arg.launch
mi_primer_robot/rviz/: visualizar_robot.rviz
mi_primer_robot/urdf/: robot.urdf  robot_con_inercias_colisiones.urdf  robot_con_ruedas.urdf  robot_gazebo_plugins.urdf  robot_gazebo_properties.urdf
proyecto_1/: CMakeLists.txt  package.xml
proyecto_1/launch /: control_angulo.launch  system.launch
proyecto_1/rviz/: config.rviz
proyecto_1/src/: control_angulo.cpp  cuadrado.cpp
turtlebot3_simulations/: README.md
turtlebot3_simulations/turtlebot3_gazebo/launch/: turtlebot3_empty_world.launch  turtlebot3_house.launch  turtlebot3_stage_1.launch  turtlebot3_stage_2.launch  turtlebot3_world.launch
